# qrencode

./: .dockerignore  .gitignore  README.md  compose.yml  dockerfile  flake.nix
app/: README.md  app.py  async_executor.py  pyproject.toml
app/domain/encode/: controller.py  deps.py  services.py
app/templates/: index.html
